# scope_intel

./: .gitignore  MCP Server Stubs Example.txt  README.md  global-scope-report.html
scope-intelligence-toolkit/: README.md  pyproject.toml
scope-intelligence-toolkit/docs/: PHASE6_DESIGN.md
scope-intelligence-toolkit/examples/sample-repo/: CLAUDE.md  README.md  package.json
scope-intelligence-toolkit/examples/sample-repo/.scope-intelligence/: aliases.json  dependencies.json  features.json  packages.json  repo_summary.json  state.json  symbols.json  tests.json  touchpoints.json
scope-intelligence-toolkit/examples/sample-repo/src/auth/: login.py  session.py
scope-intelligence-toolkit/examples/sample-repo/src/billing/: PaymentController.java  PaymentService.java
scope-intelligence-toolkit/examples/sample-repo/src/checkout/: cart.py  service.py
scope-intelligence-toolkit/scope_intel/: __init__.py  __main__.py  cli.py  mcp_server.py
scope-intelligence-toolkit/scope_intel/adapters/: __init__.py  base.py  doc_reader.py  java_adapter.py  javascript_adapter.py  playwright_adapter.py  python_adapter.py
scope-intelligence-toolkit/scope_intel/core/: call_resolver.py  compact_context.py  diff.py  doc_ingestor.py  federation.py  graph_builder.py  graph_renderer.py  indexer.py  llm_client.py  mempalace.py  query_engine.py  reporter.py  store.py  summarizer.py  tracker.py
scope-intelligence-toolkit/scope_intel/schemas/: dependency_schema.json  feature_map_schema.json  symbol_schema.json
scope-intelligence-toolkit/tests/: test_doc_ingest.py  test_suite.py
(+64 files in other folders)
