[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-intelligence-toolkit"
version = "0.1.0"
description = "Scope intelligence, repo memory, document context, compact sidecars, and MCP tools for reducing AI codebase tokens."
requires-python = ">=3.9"
authors = [{ name = "Scope Intelligence Toolkit" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
scope = "scope_intel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scope_intel*"]

[tool.setuptools.package-data]
"scope_intel.schemas" = ["*.json"]
"scope_intel.templates" = ["*.md"]
